# SevdeskSQLbot

./: README.md  RechnungAutomatisierung.sln
RechnungAutomatisierung/: Application.cpp  Application.h  CMakeLists.txt  CsvExporter.cpp  CsvExporter.h  Database.cpp  Database.h  DatabaseConfig.cpp  DatabaseConfig.h  LICENSE  README.md  RechnungAutomatisierung.vcxproj  RechnungAutomatisierung.vcxproj.filters  Utils.cpp  Utils.h  contacts (3) (1).csv  data_filter.py  export_20250409_130732.csv  exported_contacts.csv  kunden.csv  kunden_letzter_tag.csv  main.cpp  test
RechnungAutomatisierung/x64/Debug/: RechnungAutomatisierung.exe.recipe  RechnungAutomatisierung.ilk  application.obj.enc  vc143.idb
RechnungAutomatisierung/x64/Debug/Rechnung.843c14a8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RechnungAutomatisierung.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
RechnungAutomatisierung/x64/Release/: RechnungAutomatisierung.exe.recipe  RechnungAutomatisierung.iobj  RechnungAutomatisierung.ipdb
RechnungAutomatisierung/x64/Release/Rechnung.843c14a8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  RechnungAutomatisierung.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
